fixed home page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,11 @@ iframe {
 }
 .middle-container {
   padding-top: 5%;
-  padding-left: 12%;
 }
 .bottom-container {
-  padding-top: 15%;
-  padding-left: 12%;
-  padding-right: 12%;
+  padding-left: 5%;
+  padding-right: 8%;
+  margin-top: 16%
 }
 
 
@@ -86,7 +85,7 @@ iframe {
 /******************* IMAGES ******************/
 
 .img-me {
-  width: 55%;
+  width: 70%;
   opacity: 0.5;
   border-radius: 50%;
   margin-left: 40%;
